samples/_failures_safe/1761391599_d5b003_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e2ea691.c: In function ‘main’:
./samples/SAFE/__tmp_9e2ea691.c:152:9: error: expected declaration or statement at end of input
  152 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_9e2ea691.c:152:9: error: expected declaration or statement at end of input
